tests/sources/invalid/classes/receiver_readonly_mutation_errors.fire
// Attempting to mutate fields through a read-only &this receiver must be a compile error.

import @firescript/std.io.println;

class Pt {
    int32 x;
    int32 y;

    Pt(&mut this, int32 x, int32 y) {
        this.x = x;
        this.y = y;
    }

    void setX(&this, int32 v) {
        this.x = v;  //~ ERROR FS-SEM-0001 @16
    }

    void setY(&this, int32 v) {
        this.y = v;  //~ ERROR FS-SEM-0001 @16
    }
}
